--- a/META.yml
+++ b/META.yml
@@ -110,6 +110,7 @@ requires:
   Email::Valid: 0.19
   File::UStore: 0.12
   JSON: 0
+  Logger::Simple: 0
   MIME::Lite: 3.029
   Mail::Sender: 0
   Net::Server::HTTP: 0
