--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ Build
 Makefile.PL
 MYMETA.json
 MYMETA.yml
+META.json
+META.yml
 Makefile
 _build
 blib
@@ -11,6 +13,7 @@ pm_to_blib
 yote.pid
 Yote*gz
 DB-*gz
+Devel-Simple-*gz
 Lock-*gz
 *.bak
 yote_root/html/js/local.js
