--- a/LockServer/META.yml
+++ b/LockServer/META.yml
@@ -6,9 +6,9 @@ build_requires:
   Module::Build: '0'
   Test::More: '0'
 configure_requires:
-  Module::Build: '0.40'
+  Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Module::Build version 0.4214, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,11 +17,12 @@ name: Lock-Server
 provides:
   Lock::Server:
     file: lib/Lock/Server.pm
-    version: '1.3'
+    version: '1.4'
   Lock::Server::Client:
     file: lib/Lock/Server.pm
 requires:
   perl: v5.9.4
 resources:
   license: http://dev.perl.org/licenses/
-version: '1.3'
+version: '1.4'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
