updated lock server timeouts

--- a/YoteBase/META.yml
+++ b/YoteBase/META.yml
@@ -6,9 +6,9 @@ build_requires:
   Module::Build: '0.4'
   Test::More: '0'
 configure_requires:
-  Module::Build: '0.40'
+  Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Module::Build version 0.4214, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,22 +17,22 @@ name: Yote
 provides:
   Yote:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
   Yote::Array:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
   Yote::Hash:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
   Yote::Obj:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
   Yote::ObjStore:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
   Yote::YoteDB:
     file: lib/Yote.pm
-    version: '1.2'
+    version: '1.3'
 requires:
   DB::DataStore: '1'
   Devel::Refcount: '0.1'
@@ -41,4 +41,5 @@ requires:
   perl: v5.12.0
 resources:
   license: http://dev.perl.org/licenses/
-version: '1.2'
+version: '1.3'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
