--- a/FixedRecordStore/META.yml
+++ b/FixedRecordStore/META.yml
@@ -6,24 +6,25 @@ build_requires:
   Module::Build: '0'
   Test::More: '0'
 configure_requires:
-  Module::Build: '0.40'
+  Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
-name: DB-DataStore
+name: Data-RecordStore
 provides:
-  DB::DataStore:
-    file: lib/DB/DataStore.pm
-    version: '1.04'
-  DB::DataStore::FixedRecycleStore:
-    file: lib/DB/DataStore.pm
-  DB::DataStore::FixedStore:
-    file: lib/DB/DataStore.pm
+  Data::RecordStore:
+    file: lib/Data/RecordStore.pm
+    version: '1.06'
+  Data::RecordStore::FixedRecycleStore:
+    file: lib/Data/RecordStore.pm
+  Data::RecordStore::FixedStore:
+    file: lib/Data/RecordStore.pm
 requires:
   perl: v5.9.4
+version: '1.06'
 resources:
   license: http://dev.perl.org/licenses/
-version: '1.04'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
