--- a/YoteBase/META.yml
+++ b/YoteBase/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4214, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,29 +17,29 @@ name: Yote
 provides:
   Yote:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
   Yote::Array:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
   Yote::Hash:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
   Yote::Obj:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
   Yote::ObjStore:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
   Yote::YoteDB:
     file: lib/Yote.pm
-    version: '1.35'
+    version: '1.37'
 requires:
-  DB::DataStore: '1'
+  Data::RecordStore: '1'
   Devel::Refcount: '0.1'
   JSON: '0'
   WeakRef: '0.01'
   perl: v5.12.0
 resources:
   license: http://dev.perl.org/licenses/
-version: '1.35'
+version: '1.37'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
