--- a/FixedRecordStore/META.yml
+++ b/FixedRecordStore/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Module::Build version 0.4216, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,13 +18,12 @@ name: Data-RecordStore
 provides:
   Data::RecordStore:
     file: lib/Data/RecordStore.pm
-    version: '1.09'
-  Data::RecordStore::FixedRecycleStore:
-    file: lib/Data/RecordStore.pm
+    version: '2.0'
   Data::RecordStore::FixedStore:
     file: lib/Data/RecordStore.pm
 requires:
   perl: v5.9.4
 resources:
   license: http://dev.perl.org/licenses/
-version: '1.09'
+version: '2.0'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
